<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/black_effective"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:layout_marginTop="@dimen/app_bar_height"
    android:gravity="center|start"
    android:orientation="horizontal">

    <ImageButton
      android:id="@+id/navBackBtn"
      style="@style/Button.ImageButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:background="@color/transparent"
      android:tint="@color/white"
      app:srcCompat="@drawable/ic_keyboard_backspace_24px" />

    <TextView
      style="@style/TextStyle.Heading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:text="@string/about"
      android:textColor="@color/white"
      android:textSize="20sp" />
  </LinearLayout>

  <TextView
    style="@style/TextStyle.Heading"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:autoLink="web"
    android:padding="20dp"
    android:text="@string/project_info"
    android:textColor="@color/white"
    android:textSize="20sp" />

  <TextView
    android:id="@+id/blogTitle"
    style="@style/TextStyle.Title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:autoLink="web"
    android:padding="10dp"
    android:text="@string/link_mvp_blog"
    android:textColor="@color/white" />

  <TextView
    android:id="@+id/repoTitle"
    style="@style/TextStyle.Title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autoLink="web"
    android:padding="10dp"
    android:text="@string/link_mvp_repo"
    android:textColor="@color/white" />

  <TextView
    android:id="@+id/mindorksBlog"
    style="@style/TextStyle.Title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autoLink="web"
    android:padding="10dp"
    android:text="@string/link_mindorks_blog"
    android:textColor="@color/white" />

  <TextView
    android:id="@+id/mindorksRepo"
    style="@style/TextStyle.Title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autoLink="web"
    android:padding="10dp"
    android:text="@string/link_mindorks_repo"
    android:textColor="@color/white" />
</LinearLayout>