<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/activity_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/bg_design">

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:layout_marginBottom="80dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="22dp">

    <TextView
      style="@style/TextStyle.Heading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      android:layout_gravity="center|top"
      android:text="@string/login_dummy"
      android:textAllCaps="true"
      android:textSize="20sp"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:layout_gravity="center"
      android:orientation="vertical">

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/et_email"
          style="@style/TextStyle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:paddingBottom="10dp"
          android:background="@drawable/input_border_bottom"
          android:cursorVisible="true"
          android:gravity="center|left|bottom"
          android:hint="@string/email"
          android:inputType="textEmailAddress"
          android:maxLength="50"
          android:textColor="@color/black_effective"
          android:textSize="18sp"/>

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/et_password"
          style="@style/TextStyle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:paddingBottom="10dp"
          android:background="@drawable/input_border_bottom"
          android:cursorVisible="true"
          android:gravity="center|left|bottom"
          android:inputType="textPassword"
          android:maxLength="50"
          android:textColor="@color/black_effective"
          android:textSize="18sp"/>

      </android.support.design.widget.TextInputLayout>

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnServerLogin"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="40dp"
      android:layout_gravity="bottom|center"
      android:orientation="horizontal">

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/ibGoogleLogin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:background="@drawable/ic_google_plus"/>

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/ibFbLogin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/ic_facebook"
        android:scaleType="centerCrop"/>
    </LinearLayout>
  </android.support.v7.widget.CardView>

</RelativeLayout>